[gd_scene load_steps=23 format=3 uid="uid://w2si6w7e7p88"]

[ext_resource type="Script" path="res://script/endgame/end_game.gd" id="1_jvtuu"]
[ext_resource type="Texture2D" uid="uid://ce3irieqr3grr" path="res://images/ecran_de_fin/endingscreen.png" id="1_rmqnx"]
[ext_resource type="Texture2D" uid="uid://d1t3sivpduwfu" path="res://images/ecran_de_fin/titre_endgame.png" id="2_7lrg6"]
[ext_resource type="Texture2D" uid="uid://bv3j62oqsqjtw" path="res://images/ecran_de_fin/player2win.png" id="5_ex78r"]
[ext_resource type="Texture2D" uid="uid://b820wmusoikj3" path="res://images/animation/price_animation.png" id="6_5vad4"]
[ext_resource type="Texture2D" uid="uid://drixoukoha1dp" path="res://images/P1.png" id="6_otii5"]

[sub_resource type="GDScript" id="GDScript_yjbv2"]
script/source = "extends Camera2D

# Référence au centre

func _ready():
	# Positionne la caméra au centre au départ
	self.position = Vector2(0, 0)  # Modifie cette valeur si nécessaire

func _process(delta):
	# La caméra reste au centre, peut être retiré si la caméra est fixe
	self.position = Vector2(0, 0)
"

[sub_resource type="Animation" id="Animation_o1bq6"]
resource_name = "default"
length = 8.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("toupie_gagnante:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1.9, 7.8),
"transitions": PackedFloat32Array(0.812252, 1.1487),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(50, 50)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("player_title:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.43333, 1.86667, 2.96667),
"transitions": PackedFloat32Array(1, 0.164939, 9.18959),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(5, 5), Vector2(2, 2)]
}

[sub_resource type="Animation" id="Animation_5so5o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("toupie_gagnante:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("player_title:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vcmqk"]
_data = {
"RESET": SubResource("Animation_5so5o"),
"default": SubResource("Animation_o1bq6")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_dwb30"]
atlas = ExtResource("6_5vad4")
region = Rect2(0, 0, 40, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_bodeh"]
atlas = ExtResource("6_5vad4")
region = Rect2(40, 0, 40, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_yx6c1"]
atlas = ExtResource("6_5vad4")
region = Rect2(80, 0, 40, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_bmjt0"]
atlas = ExtResource("6_5vad4")
region = Rect2(120, 0, 40, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_xrkaq"]
atlas = ExtResource("6_5vad4")
region = Rect2(0, 50, 40, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqeh3"]
atlas = ExtResource("6_5vad4")
region = Rect2(40, 50, 40, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_pacid"]
atlas = ExtResource("6_5vad4")
region = Rect2(80, 50, 40, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_cuvte"]
atlas = ExtResource("6_5vad4")
region = Rect2(120, 50, 40, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_ycwt3"]
atlas = ExtResource("6_5vad4")
region = Rect2(0, 100, 40, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2tyd"]
atlas = ExtResource("6_5vad4")
region = Rect2(40, 100, 40, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_fgw2a"]
atlas = ExtResource("6_5vad4")
region = Rect2(80, 100, 40, 50)

[sub_resource type="SpriteFrames" id="SpriteFrames_tk4eg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dwb30")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bodeh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yx6c1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bmjt0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xrkaq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gqeh3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pacid")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cuvte")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ycwt3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2tyd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fgw2a")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[node name="EndGame" type="Node2D"]
script = ExtResource("1_jvtuu")

[node name="Background1" type="Sprite2D" parent="."]
show_behind_parent = true
texture_filter = 1
position = Vector2(2.07722e-05, 6.67572e-06)
scale = Vector2(23.04, 12.96)
texture = ExtResource("1_rmqnx")

[node name="toupie_gagnante" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("6_otii5")

[node name="Camera" type="Camera2D" parent="."]
limit_left = -576
limit_top = -324
limit_right = 576
limit_bottom = 324
drag_vertical_enabled = true
drag_left_margin = 0.0
drag_top_margin = 0.0
drag_right_margin = 0.0
drag_bottom_margin = 0.0
editor_draw_limits = true
editor_draw_drag_margin = true
script = SubResource("GDScript_yjbv2")

[node name="endgame_title" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -250)
scale = Vector2(6.53, 9.3)
texture = ExtResource("2_7lrg6")

[node name="player_title" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-1, 9)
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("5_ex78r")

[node name="Animation_endgame" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vcmqk")
}
autoplay = "default"

[node name="Price" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -119)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_tk4eg")
speed_scale = 2.0

[node name="rejouer_btn" type="Button" parent="."]
offset_left = -208.0
offset_top = 113.0
offset_right = 211.0
offset_bottom = 198.0
text = "Replay"

[node name="ecran_titre_btn" type="Button" parent="."]
offset_left = -208.0
offset_top = 200.0
offset_right = 211.0
offset_bottom = 285.0
text = "Title Screen"

[connection signal="button_down" from="rejouer_btn" to="." method="return_title_screen"]
[connection signal="button_down" from="ecran_titre_btn" to="." method="replay"]
